# recipe-planner

./: CLAUDE.md  CONTEXT.md  pyproject.toml
app/: db.py  main.py
app/models/: __init__.py  ingredient.py  pantry.py  rating.py  recipe.py  user.py  weekly_plan.py
app/optimizer/: __init__.py  model.py  types.py
app/routes/: health.py  ingredients.py  pantry.py  plans.py  ratings.py  recipes.py  recommendations.py
app/services/: carryover.py  ratings.py  recommendations.py  scoring.py  units.py
docs/adr/: 0001-single-tenant-identity-model.md  0002-stack-fastapi-sqlmodel-sqlite-uv.md  0003-cp-sat-with-weighted-linear-objective.md  0004-three-tier-waste-model-with-carryover-pantry.md  0005-ingredient-scoped-units-json-conversions.md  0006-recommendations-as-separate-diversified-ranking.md  0007-recipes-as-one-household-dinner.md
migrations/: env.py
migrations/versions/: 0001_users_seed_create_users_and_seed_joe_and_jessica.py  0002_ingredients.py  0003_recipes.py  0004_pantry.py  0005_ratings.py  0006_weekly_plans.py
tests/: conftest.py  test_health.py  test_ingredients.py  test_pantry.py  test_plans.py  test_plans_commit.py  test_ratings.py  test_recipes.py  test_recommendations.py
